Revision history for Ocsinventory::Agent

       * Fix Bug #720626 about Gentoo packages with hyphen in their names
       * Fix a bug with the use of pacman tool on ArchLinux. We now launch the real packages manager instead of the famous game ;) ;)
       * Avoid perl errors when no answer from OCS server
       * Enhance logging in Snmp.pm and Download.pm when disabling this modules (local mode or prerequisites not OK)
       * Patches from Bernhard Denner to enhance CPU and memry detection on old SUN solaris workstations
       * Patch from Bernhard Denner to enhance dhcp-leases files detection on Linux systems

2.0 rc2
       * Add a new cleanXml() subroutine in Common.pm to clean non printable characters in both standard inventory and SNMP inventory
       * Various patches for Snmp/9.pm module (Cisco)
       * Add a new addSnmpCPU() subroutine in Common.pm
       * Disabling Download.pm if agent running in local mode

2.0 rc1
       * Add download_start_handler to check if Net::SSLeay can be load and disable Download.pm if not
       * Add Net::SNMP optionnal dependency in README file.
       * Delete Win32 from backend
       * Various patches for 9.pm and If_Mib.pm to enhance ethernet ports speed display (François Mermet)
       * New SNMP modules for Juniper, Futjitsu and F5 vendors (François Mermet)
       * Fix Bug #682689 about missing data for disk when can't run lshal command (Bernhard Denner)
       * Add a warning message about user privacy in man page for --scan-homedirs option
       * Various patches for 8072.pm an If_Mib.pm (François Mermet)
       * Change timeout for Backend modules from 180 to 600 seconds
       * Change timeout for Backend modules from 180 to 600 seconds
       * Back on the ipdiscover binary from the old OCS Linux Agent to make network scans lighter than Nmap. Ipdiscover binary is only available under Linux systems
       * Use LaunchDaemons instead of LaunchAgents in MacOSX package