@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * Fix Bug #720635 about lspci usage on old Linux distributions
        * Fix Bug #720626 about Gentoo packages with hyphen in their names
        * Fix a bug with the use of pacman tool on ArchLinux. We now launch the real packages manager instead of the famous game ;) ;)
        * Avoid perl errors when no answer from OCS server
